# Open_Duck_Mini_Runtime_HRC_version

./: .dockerignore  .gitignore  Dockerfile  README.md
duck_walk_bringup/: package.xml  setup.cfg  setup.py
duck_walk_bringup/duck_walk_bringup/: __init__.py  walk_entry.py
duck_walk_bringup/launch/: walk.launch.py
mini_bdx_runtime/: __init__.py  antennas.py  duck_config.py  eyes.py  feet_contacts.py  onnx_infer.py  poly_reference_motion.py  projector.py  raw_imu.py  rl_utils.py  rustypot_position_hwi.py  sounds.py
mini_bdx_runtime/mini_bdx_runtime/: raw_imu.py
scripts/: __init__.py  walk_test.py  walk_test.py.bak
